istio-system/health-vs.yaml
---
# GCP sends health-checks to "/" on the same port as the backend defined in the ingress
# But whereas IStio should receive traffic on port 80, its health-check is on port 15020
# We therefore use Istio itself to redirect the health-check
#  - from endpoint on port 80
#  - to endpoint on port 15020
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: health
  namespace: istio-system
spec:
  gateways:
  - health-gateway
  hosts:
  - "*"
  http:
  - match:
    - headers:
        user-agent:
          prefix: GoogleHC
      method:
        exact: GET
      uri:
        exact: /
    rewrite:
      authority: istio-ingressgateway.istio-system.svc.cluster.local:15020
      uri: /healthz/ready
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 15020
