istio-system/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  annotations:
    # Enable use of manually pre-defined global static IP
    kubernetes.io/ingress.global-static-ip-name: bookinfo-static-ip
    # Enable use of a GCP-managed certificate through a ManagedCertificate resource
    networking.gke.io/managed-certificates: bookinfo
spec:
  rules:
  - host: bookinfo.fluxcd.sasstaeng.sascloud.io
    http:
      paths:
      - path: /*
        backend:
          # In this case we don't go directly to app-specific services,
          # but first to the Istio ingress-gateway
          # We use port 80 because it is the "ingress-like" port of the ingress-gateway
          serviceName: istio-ingressgateway
          servicePort: 80
